--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ on:
           - 'crDroid 14.0'
           - 'ArrowOS 13.1'
           - 'DerpFest 13.0'
-          - 'CipherOS 5.0'
+          - 'CipherOS 5.1'
       BUILD_DIFFERENT_ROM:
         description: "Command to initialize a different 'repo' project:"
         required: false
@@ -117,7 +117,7 @@ jobs:
             repo init -u https://github.com/LineageOS/android.git -b lineage-20.0 --git-lfs --depth=1
           ;;
           "CipherOS 5.0")
-            repo init -u https://github.com/CipherOS/android_manifest.git -b fourteen --git-lfs --depth=1
+            repo init -u https://github.com/CipherOS/android_manifest.git -b fourteen-qpr --git-lfs --depth=1
           ;;
         esac
       id: pwd
